check html - html 17s/d 20

--- a/public html/10. Goa Gajah Ubud.html
+++ b/public html/10. Goa Gajah Ubud.html
@@ -52,8 +52,6 @@
       </section>
       <section>
         <p>Diduga kata Goa Gajah berasal dari kata &quotLwa Gajah&quot, yang berarti wihara tempat pemujaan para Bhiksu umat beragama Budha. Pada lontar Negarakertagama yang disusun oleh Mpu Prapanca pada tahun 1365 M, terdapat nama tersebut. Sedangkan kata &quotLwa&quot berarti sungai. Maka disimpulkan menjadi pertapaan yang terletak di tepi sungai.</p>
-      </section>
-      <section>
         <p>Dari areal parkir menuju Goa Gajah Ubud, wisatawan harus menuruni tangga menuju Goa Gajah Ubud. Tempat ini dikelilingi pepohonan hijau yang rindang, sehingga suasananya sangat sejuk dan asri</p>
       </section>
       <section>
@@ -70,12 +68,8 @@
       </Section>
       <section>
         <h2>Cara Terbaik Ke Tempat Wisata Goa Gajah Di Bali</h2>
-      </section>
-      <section>
         <p>Jika anda memerlukan sarana transfortasi untuk menuju tempat wisata ini, anda dapat mengunakan jasa Bali sewa mobil murah yang kami sediakan untuk anda, baik dengan supir atau tanpa supir. Bagi anda yang menginginkan kemewahan dan kenyamanan dalam kendaraan, anda dapat menggunakan jasa sewa Alphard di Bali yang kami sediakan untuk anda.</p>
-      </section>
-      <section>
-        <p>Jika anda menyukai tempat wisata <a href = "http://www.rentalmobilbali.net/goa-lawah/">Goa Gajah</a> di Bali, mungkin anda juga akan tertarik mengunjungi pura Goa Lawah. Jika anda memerlukan petunjuk arah untuk menuju lokasi dari Goa Gajah, silakan gunakan peta di Google Map dengan cara mengklik link ini Lihat Peta Lebih Besar.</p>
+        <p>Jika anda menyukai tempat wisata <a href = "http://www.rentalmobilbali.net/goa-lawah/">Goa Gajah</a> di Bali, mungkin anda juga akan tertarik mengunjungi pura Goa Lawah.</p>
       </section>
     </article>
   </body>
