--- a/public html/19. Yeh Pulu Relief.html
+++ b/public html/19. Yeh Pulu Relief.html
@@ -3,29 +3,61 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Yeh Pulu Relief</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h2>Yeh Pulu </h2><img src="images/relief-yeh-pulu.jpg">
+      <section>
+        <h2>Yeh Pulu </h2><img src="images/relief-yeh-pulu.jpg" height="300" width="600">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Salah satu tempat wisata budaya di Bali yang unik dan jarang wisatawan tahu adalah pura Yeh Pulu Ubud Bali. Sebagian besar wisatawan yang berkunjung ke pura Yeh Pulu Ubud adalah wisatawan asing. Wisatawan domestik sangat jarang mengunjungi objek wisata di Bali ini. Hal ini disebabkan karena kurangnya promosi akan tempat wisata sejarah ini, untuk wisatawan domestik. Di halaman situs ini, saya akan menuliskan kepada pembaca tentang pura Yeh Pulu Bali, betapa uniknya dan bersejarahnya lokasi wisata Yeh Pulu Ubud, sehingga layak untuk dijadikan salah satu objek wisata di Bali yang harus dikunjungi.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h3>Lokasi Pura Yeh Pulu Ubud Bali</h3>
+      <section>
+        <h3>Lokasi Pura Yeh Pulu Ubud Bali</h3><img src="images/pura-yeh-pulu.jpg" height="300" width="600">
+      </section>
+      <section>
         <p>Lokasi dari objek wisata Yeh Pulu Bali, berada di desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Karena terletak di desa Bedahulu, pura Yeh Pulu juga sering disebut dengan nama Yeh Pulu Bedulu. Untuk berwisata ke objek wisata Yeh Pulu, anda tidak harus secara khusus meluangkan waktu untuk ke objek wisata di Ubud ini. Karena tempat wisata Yeh Pulu, searah dengan rute Kuta - Denpasar - Ubud - Kintamani.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/pura-yeh-pulu.jpg"></section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief.Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.</p>
+        <p>Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief. </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Untuk mencapai lokasi tempat wisata Pura Yeh Pulu, cara terbaik adalah menggunakan jasa sewa mobil di Bali dengan sopir. Karena mencari lokasi dari tempat wisata ini, lumayan susah dan sangat jarang tersedia taksi untuk mengantar anda kembali. Selain itu menggunakan jasa sewa mobil + driver di Bali, selain harga total lebih murah, anda juga tidak perlu memikirkan akan tempat parkir dan kemacetan di jalan raya.</p>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/yeh-pulu-relief.jpg" height="300" width 600>
+        <p>Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/yeh-pulu-relief.jpg"></section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Untuk mencapai lokasi dari pura ini, anda harus melewati jalanan setapak lumayan kecil. Jalan setapak ini sangat terawat, baik dari sisi kebersihan dan keindahan. Perawatan akan jalan setapak ini, dilakukan oleh masyarakat sekitar yang memiliki organisasi pertanian, dengan nama Subak. Di lokasi objek wisata ini, tersedia sarana tempat parkir, toilet, toko penjual oleh-oleh khas Bali dan jasa pemandu wisata, jika anda ingin tahu lebih tentang sejarah Pura Yeh Pulu Bedulu.</p>
       </section>
@@ -50,4 +82,15 @@
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
