--- a/public html/20. Tari Barong Ubud.html
+++ b/public html/20. Tari Barong Ubud.html
@@ -3,22 +3,51 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Pura Gunung Lebah</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h2>Tari Barong Ubud</h2><img src="images/TariBarongUbud.jpg" height="250" width="600" class="big">
+        <h2>Tari Barong Ubud</h2><img src="images/TariBarongUbud.jpg" height="300" width="600" class="big">
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
         <p>Salah satu objek wisata di Bali yang patut anda kunjungi selama liburan di pulau dewata adalah desa Ubud. Ada beberapa alasan kenapa kami merekomendasi anda untuk berwisata ke Ubud. Hal ini di karenakan, tempat wisata di Ubud memiliki berbagai macam pilihan tempat wisata, baik untuk wisata alam, wisata budaya dan wisata seni, khususnya seni lukis dan seni tari seperti tari Barong Ubud.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Ubud sangat terkenal akan wisata alam seperti aktivitas rafting di sungai Ayung Ubud, wisata ke museum seni lukis atau menonton pertunjukan seni tari, yang hampir setiap hari diadakan di berbagai tempat di objek wisata Ubud.</p>
-      </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Saking terkenalnya objek wisata Ubud, baik di kalangan wisatawan domestik dan wisatawan mancanegara, membuat Ubud tidak pernah sepi dari kunjungan wisatawan setiap harinya. Hal ini membuat objek wisata Ubud memiliki begitu banyak sarana pariwisata, terutama tempat menginap, baik dari hotel maupun villa.</p>
+        <p>Ubud sangat terkenal akan wisata alam seperti aktivitas rafting di sungai Ayung Ubud, wisata ke museum seni lukis atau menonton pertunjukan seni tari, yang hampir setiap hari diadakan di berbagai tempat di objek wisata Ubud. Saking terkenalnya objek wisata Ubud, baik di kalangan wisatawan domestik dan wisatawan mancanegara, membuat Ubud tidak pernah sepi dari kunjungan wisatawan setiap harinya. Hal ini membuat objek wisata Ubud memiliki begitu banyak sarana pariwisata, terutama tempat menginap, baik dari hotel maupun villa.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Para pengusaha travel agent di Bali, juga berlomba menawarkan berbagai macam paket wisata, yang menfokuskan akan paket liburan di Ubud Bali. Kami juga tidak ketinggalan dalam menawarkan paket liburan ke Ubud. Tentunya setiap wisatawan yang berlibur di Bali tidak semua memilih untuk membeli paket wisata ke Ubud, ada banyak wisatawan yang juga memilih untuk wisata di Ubud tanpa membeli paket wisata.</p>
@@ -26,13 +55,13 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Sebagian dari mereka dalam berwisata di Ubud tentunya akan memerlukan sarana tranfortasi, dan wisatawan sebagian besar akan mengunakan jasa sewa mobil dan driver di Bali. Dengan alasan murah dan tidak perlu memikirkan tempat parkir dan jalanan macet.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h3>Pertunjukan Kesenian Tari Barong Ubud</h3>
         <p>Saat anda wisata di Bali, tentunya anda tidak hanya ingin diam di hotel atau menghabiskan waktu ke shoping mall, tanpa melihat sesuatu yang unik dan hanya ada di Bali, seperti pertujukan kesenian khas tradisional budaya Bali. Salah satu pertunjukan seni yang paling di cari di Ubud adalah pertunjukan tari Barong Ubud dan tari kecak Ubud.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Tarian Barong sebuah kesenian tari tradisional di Bali, yang sebagian penarinya menggunakan topeng dan kostum yang menyerupai hewan. Jenis tari Barong yang paling banyak di minati adalah tari Barong Ket. Lalu apa itu Barong Ket?</p>
-        <p>Jika di lihat dari bentuknya, Barong Ket merupakan perpaduan bentuk binatang antara harimau, singa, ular naga dan sapi. Seluruh badan dari Barong Ket, dihiasi dengan ukiran tradisional Bali yang berbahan dasar kulit sapi dan dalam ukiran tersebut terdapat puluhan cermin kaca yang berukuran kecil.</p>
+        <P>Jika di lihat dari bentuknya, Barong Ket merupakan perpaduan bentuk binatang antara harimau, singa, ular naga dan sapi. Seluruh badan dari Barong Ket, dihiasi dengan ukiran tradisional Bali yang berbahan dasar kulit sapi dan dalam ukiran tersebut terdapat puluhan cermin kaca yang berukuran kecil.</P>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Jadi pada saat ada cahaya yang mengenai cermin kaca, membuat wujud dari Barong kelihatan berkilauan. Untuk membuat tampak seperti bintang, maka di Barong Ket anda akan melihat banyak Bulu. Bulu ini terbuat dari serat daun tanaman yang dikeringkan dan biasanya mengunakan daun pandan dan ijuk</p>
@@ -96,4 +125,15 @@
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
