--- a/public html/17. Museum Blanco Ubud.html
+++ b/public html/17. Museum Blanco Ubud.html
@@ -3,45 +3,93 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Museum Blanco Ubud</title>
+    <title>Wisata Ubud Bali</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/prism/themes/prism.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/todc-bootstrap-main/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/main-presentation.css">
+    <link href="test.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="classic">
+    <nav role="navigation" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="presentation-chooser" class="navbar-toggle"><span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand">Wisata Ubud Bali</a>
+        </div>
+        <div id="presentation-chooser" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
+                <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
+                <li><a href="3. Pura Taman Saraswati.html">Pura Taman Saraswati</a></li>
+                <li><a href="4. Tari Kecak Ubud.html">Tari Kecak Ubud</a></li>
+                <li><a href="5. Lempad House.html">Lempad House</a></li>
+                <li><a href="6. Ayung Rafting.html">Ayung Rafting</a></li>
+                <li><a href="7. Sawah Terasering Ubud.html">Sawah Terasering Ubud</a></li>
+                <li><a href="8. Ubud Monkey Forest.html">Ubud Monkey Forest</a></li>
+                <li><a href="9. Arma Museum Ubud.html">Arma Museum Ubud</a></li>
+                <li><a href="10. Goa Gajah Ubud.html">Goa Gajah Ubud</a></li>
+                <li><a href="11. Gunung Kawi Bali.html">Gunung Kawi Bali</a></li>
+                <li><a href="12. Air Terjun Tegenungan.html">Air Terjun Tegenungan</a></li>
+                <li><a href="13. Tirta Sari Legong.html">Tirta Sari Legong (Percabangan)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <article>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <h1>Museum Blanco Ubud</h1><img src="images/Museum-Blanco-Ubud.jpg" width="200" class="big">
+      <section>
+        <h1>Museum Blanco Ubud</h1><img src="images/Museum-Blanco-Ubud.jpg" height="300" width="600" class="big">
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+      <section>
         <p>Wisata di Bali tidak akan lengkap rasanya jika tidak wisata ke Ubud Bali. Tempat wisata di Ubud salah satu favorit wisatawan terutama wisatawan mancanegara untuk berlibur. Tempat wisata ini menawarkan beranekaragam aktivitas wisata yang berbeda dengan tempat wisata fovorit lainya di Bali.Aktivitas wisata yang dapat anda lakukan di Ubud seperti wisata rafting di sungai Ayung, melihat pemandangan sawah terasering di Tegallalang dan tentunya menonton pentas kesenian tari dan melihat karya seni lukis seniman terkenal.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Tempat wisata di Ubud, lebih cocok bagi wisatawan yang ingin wisata ke daerah pedesaan dengan suasana tenang dengan lingkungan alam yang masih asri. Jika anda liburan bersama anak-anak, tentunya Ubud bukan tempat wisata yang cocok buat liburan untuk anak-anak anda. Tempat wisata Kuta, lebih cocok untuk liburan bersama anak di Bali atau wisata bahari di pantai Tanjung benoa dengan mencoba watersport di Tanjung Benoa. Sebagian besar para pepcinta seni lukis, selalu menyempatkan diri untuk liburan ke Ubud. Karena di tempat wisata Ubud, terdapat banyak museum yang menawarkan koleksi lukisan dari pelukis terkenal mancanegara dan pelukis Indonesia. Salah satu museum yang sangat terkenal di Ubud adalah Museum Blanco Ubud.</p>
+      <section>
+        <p>Tempat wisata di Ubud, lebih cocok bagi wisatawan yang ingin wisata ke daerah pedesaan dengan suasana tenang dengan lingkungan alam yang masih asri. Jika anda liburan bersama anak-anak, tentunya Ubud bukan tempat wisata yang cocok buat liburan untuk anak-anak anda. Tempat wisata Kuta, lebih cocok untuk liburan bersama anak di Bali atau wisata bahari di pantai Tanjung benoa dengan mencoba watersport di Tanjung Benoa.     </p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/antonio-blanco-museum-ubud.jpg" height="250" width="600" class="big"></section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
+        <p>Sebagian besar para pepcinta seni lukis, selalu menyempatkan diri untuk liburan ke Ubud. Karena di tempat wisata Ubud, terdapat banyak museum yang menawarkan koleksi lukisan dari pelukis terkenal mancanegara dan pelukis Indonesia. Salah satu museum yang sangat terkenal di Ubud adalah Museum Blanco Ubud.</p><img src="images/antonio-blanco-museum-ubud.jpg" height="200" width="500" class="big">
+        <h2>Gambar Blanco Museum Ubud</h2>
+      </section>
+      <section>
         <h3>Sejarah Museum Antonio Blanco Ubud Bali</h3>
         <p> Pelukis keturunan Spanyol dan Amerika bernama Mario Antonio Blanco, sangat terkenal dengan karya seni yang menggambarkan wanita. Pada tahun 1953, dia menikahi seorang penari Bali dan menggunakan istrinya sebagai model lukisan yang bernama Ni Ronji. Pemilik museum Blanco di Ubud adalah seorang pria kelahiran Manila, Filipina 15 September 1912, membangun sebuah rumah sekaligus museum di atas tanah pemberian Raja Ubud dari Puri Saren, Tjokorde Gde Agung Sukawati.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <p>Meseum yang terletak di areal perbukitan sungai Campuhan Ubud, setiap hari museum ini tidak pernah sepi pengunjung. Sekitar 100 orang sampai 150 orang wisatawan lokal maupun mancanegara, tertarik melihat hasil karya sang maestro. Menurut wisatawan dari Spayol, Amerika Serikat, Rusia, Jepang dan Australia yang datang ke Museum Blanco Ubud, karya lukis Antonio Blanco memiliki nilai seni yang tinggi terhadap kehidupan orang Bali.</p><img src="images/antonio-blanco.jpg">
+      <section>
+        <p>Meseum yang terletak di areal perbukitan sungai Campuhan Ubud, setiap hari museum ini tidak pernah sepi pengunjung. Sekitar 100 orang sampai 150 orang wisatawan lokal maupun mancanegara, tertarik melihat hasil karya sang maestro. Menurut wisatawan dari Spayol, Amerika Serikat, Rusia, Jepang dan Australia yang datang ke Museum Blanco Ubud, karya lukis Antonio Blanco memiliki nilai seni yang tinggi terhadap kehidupan orang Bali.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
-        <h2>Penghargaan Terhadap Antonio Blanco</h2>
+      <section>
+        <h2>Penghargaan Terhadap Antonio Blanco</h2><img src="images/antonio-blanco.jpg" height="200" width="500">
         <p>Antonio Blanco menerima banyak penghargaan akan hasil karya seninya, seperti Tiffany Fellowship (sebuah penghargaan khusus dari perkumpulan Artist di Honolulu Hawai), penghargaan Chevalier du Sahametrai di Kamboja, penghargaan dari presiden Soekarno dan hadiah Seni Kritik di Spanyol. Antonio Blaco juga mendapatkan penghargaan dari Raja Spanyol yang pada saat itu Juan Carlos I, dengan memberikan gelar >>Don<< di depan namanya.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Mantan Presiden Soeharto dan Presiden Soekarno, sangat mengagumi lukisan yang memfokuskan pada keindahan fisik perempuan Bali. Sekitar 300 karya seni tersimpan dengan rapi di museum Antonio Blanco di Ubud, yang dibangun pada tanggal 28 Desember 1998.</p>
+      </section>
+      <section>
         <p>Don Antonio Blanco meninggal dunia pada tanggal 10 Desember 1999 diDenpasar, karena penyakit ginjal dan hati. Antonio Blanco memiliki empat orang anak yaitu, Cempaka, Mario, Orchid dan Mahadewi. Dari keempat anaknya, hanya Mario Blanco yang mewarisi bakat sang ayah. Namun hasil karyanya lebih menampilkan pada kehidupan alam dan lingkungan di sekitarnya berbeda dengan sang ayah.</p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <h2>Alamat Museum Blanco Ubud</h2><img src="images/don-antonio-blanco-museum-ubud.jpg" height="250" width="500" class="big">
         <p>Museum Blanco Ubud terletak di desa Campuan, Ubud Bali - Indonesia P.O. Box 80571. Untuk mendapatkan peta lokasi dari Museum Blanco Ubud, silakan klik link ini, <a href="https://www.google.com/maps/place/The+Blanco+Renaissance+Museum/@-8.505593,115.254256,17z/data=!3m1!4b1!4m2!3m1!1s0x2dd23d3de1f0053d:0x3c7b62c135ac609"> The Blanco Renaissance Museum</a></p>
       </section>
-      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+      <section>
         <p>Berbagai fasilitas juga disediakan oleh pengelola museum bagi wisatawan yang datang. Seperti restoran, art shop, toilet dan ruang santai. Cukup dengan membayar tiket Rp 30.000 (untuk pengunjung warganegara Indonesia) anda bebas berkeliling di areal museum. Sedangkan untuk wisatawan asing, akan dikenakan biaya tiket masuk museum Blanco Ubud sebesar Rp 50.000 per orang. Jam buka museum adalah setiap hari, termasuk hari libur dan hari minggu, dari jam 09:00 - 17:00.</p>
-        <p></p><img src="images/antonio-blanco-museum-ubud-bali.jpg" height="150" width="400" class="big">
+        <p></p><img src="images/antonio-blanco-museum-ubud-bali.jpg" height="200" width="600" class="big">
       </section>
     </article>
   </body>
   <script src="build/build.js"></script>
+  <script src="bower_components/bespoke.js/dist/bespoke.min.js"></script>
+  <script src="bower_components/bespoke-bullets/dist/bespoke-bullets.min.js"></script>
+  <script src="bower_components/bespoke-scale/dist/bespoke-scale.min.js"></script>
+  <script src="bower_components/bespoke-hash/dist/bespoke-hash.min.js"></script>
+  <script src="bower_components/bespoke-progress/dist/bespoke-progress.min.js"></script>
+  <script src="bower_components/bespoke-state/dist/bespoke-state.min.js"></script>
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-bash.min.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/todc-bootstrap-main/dist/js/bootstrap.min.js"></script>
 </html>
