--- a/public html/18. Legong Mahabharata.html
+++ b/public html/18. Legong Mahabharata.html
@@ -18,7 +18,7 @@
         </div>
         <div id="presentation-chooser" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Pilih Presentasi <b class="caret"></b></a>
+            <li class="dropdown"><a data-toggle="dropdown" href="#" class="dropdown-toggle">Daftar Wisata <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="1. Tampak Siring.html">Tampak Siring</a></li>
                 <li><a href="2. Puri Ubud.html">Puri Ubud</a></li>
@@ -53,13 +53,16 @@
         <p>Jenis gambelan yang digunakan untuk mengiringi tari Legong dinamakan, gambelan Semar Pegulingan. Jenis gambelan Semar Pegulingan, menghasilkan suara stereo dan terdengar nyaman di telinga. Jenis gambelan Semar Pegulingan, juga di gunakan pada tari barong di Bali.</p>
       </section>
       <section>
-        <h2>Sejarah Tari Legong Bali</h2><img src="images/Legong-Mahabharata-Di-Ubud.jpg">
+        <h2>Sejarah Tari Legong Bali</h2><img src="images/Legong-Mahabharata-Di-Ubud.jpg" height="300" width="600">
       </section>
       <section>
-        <p>Tari Legong diciptakan dan berkembang pada akhir abad ke 19 dan lebih sering ditarikan di istana kerajaan Bali atau keraton. Di masyarakat Bali, tari Legong lebih familiar dengan nama Legong Keraton, mungkin karena dulunya sering di pentaskan di keraton kerajaan Bali.Menurut cerita dari orang tua di Bali, katanya tari Legong tercipta karena seorang pangeran di kerajaan Sukawati pada saat sakit. Sang pangeran bermimpi melihat dua gadis belia menarikan tarian ini dan diiringi oleh gambelan yang sangat merdu. Setelah pangeran dari kerajaan Sukawati ini sembuh, maka tarian yang terlihat dari mimpi beliau di ciptakan dalam dunia nyata.Awal mulanya, tari Legong hanya terdapat dua orang gadis yang masih belia dan belum mengalami masa menstruasi. Kedua penari Legong akan membawa kipas, dengan kipas ini, kedua penari Legong akan melakukan gerak yang hampir sama di setiap bagian tarian.</p>
+        <p>Tari Legong diciptakan dan berkembang pada akhir abad ke 19 dan lebih sering ditarikan di istana kerajaan Bali atau keraton. Di masyarakat Bali, tari Legong lebih familiar dengan nama Legong Keraton, mungkin karena dulunya sering di pentaskan di keraton kerajaan Bali.Menurut cerita dari orang tua di Bali, katanya tari Legong tercipta karena seorang pangeran di kerajaan Sukawati pada saat sakit. </p>
       </section>
+      <Section>
+        <P>Sang pangeran bermimpi melihat dua gadis belia menarikan tarian ini dan diiringi oleh gambelan yang sangat merdu. Setelah pangeran dari kerajaan Sukawati ini sembuh, maka tarian yang terlihat dari mimpi beliau di ciptakan dalam dunia nyata.Awal mulanya, tari Legong hanya terdapat dua orang gadis yang masih belia dan belum mengalami masa menstruasi. Kedua penari Legong akan membawa kipas, dengan kipas ini, kedua penari Legong akan melakukan gerak yang hampir sama di setiap bagian tarian.</P>
+      </Section>
       <section>
-        <h2>Tari Legong Mahabharata Di Puri Ubud</h2><img src="images/Legong-Mahabharata-Puri-Saren-Ubud.jpg">
+        <h2>Tari Legong Mahabharata Di Puri Ubud</h2><img src="images/Legong-Mahabharata-Puri-Saren-Ubud.jpg" height="300" width="600">
       </section>
       <section>
         <p>Jika anda ingin menonton tari Legong Mahabharata, tempat yang harus anda kunjungi adalah puri Ubud atau sering disebut dengan nama puri Saren. Untuk melihat peta lokasi dari puri Saren silakan klik link ini, peta lokasi puri Saren Ubud. Jika anda menginap di Ubud, untuk mencari lokasi dari puri Saren sangatlah mudah, malas jalan kaki anda dapat memanggil taksi. Lalu bagi anda yang tidak menginap di tempat wisata Ubud, tentunya dengan menggunakan taksi biaya transfortasi akan menjadi mahal.</p>
@@ -68,7 +71,7 @@
         <p>Jika ingin menginap di kawasan wisata Bali selatan seperti tempat wisata Kuta dan objek wisata Seminyak, dan ingin berwisata ke Ubud, cara hemat dan terbaik adalah menggunakan jasa sewa mobil dengan sopir di Kuta. Dengan menggunakan jasa rental mobil dengan sopir di Bali, biaya tidak dihitung dengan menggunakan argo, melainkan menggunakan durasi penggunaan. Tempat wisata di Ubud sangat susah untuk mencari tempat parkir, oleh karena itu disarankan menggunakan sopir, agar tidak perlu memikirkan tempat parkir mobil. Selain menggunakan jasa sewa mobil murah di Bali dengan supir, juga dapat membeli paket tour di Bali, khusus untuk wisata ke Ubud. </p>
       </section>
       <section>
-        <h2>Jadwal Tari Legong Mahabharata Di Puri Saren</h2><img src="images/Legong-Mahabharata-seni-tari-ubud.jpg">
+        <h2>Jadwal Tari Legong Mahabharata Di Puri Saren</h2><img src="images/Legong-Mahabharata-seni-tari-ubud.jpg" height="300" width="600">
       </section>
       <section> 
         <p>Tidak setiap hari ada pementasan tari Legong Mahabharata di puri Saren Ubud, pementasan khusus untuk tari Legong Mahabharata, hanya ada pada hari minggu. Tari Legong Mahabharata di puri Saren Ubud dimulai pada jam 19:30 - 21:00, jadi lumayan lama.</p>
@@ -82,37 +85,37 @@
             <td>Jenis Tari</td>
             <td>Jam</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Senin</td>
             <td>Tari Legong Keraton</td>
             <td>19.30-21.00</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Selasa</td>
             <td>Ramayana Ballet</td>
             <td>19.30-21.00</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Rabu</td>
             <td>Tari Legong & Barong</td>
             <td>19.30-21.00</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Kamis</td>
             <td>Tari Legong Keraton</td>
             <td>19.30-21.00</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Jumat</td>
             <td>Tari Barong Ubud dan Keris</td>
             <td>19.30-21.00</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Sabtu</td>
             <td>Tari Legong Keraton</td>
             <td>19.30-21.00</td>
           </tr>
-          <tr align="left"> 
+          <tr align="left">
             <td>Minggu</td>
             <td>Tari Legong Mahabharata</td>
             <td>19.30-21.00</td>
@@ -122,13 +125,13 @@
       </section>
       <section> 
         <h3>Tips Menonton Tari Bali Di Puri Saren Ubud</h3>
-        <ul> 
+        <ol>
           <li>Ingin mendapatkan tempat duduk di bagian depan, anda harus datang lebih awal, setidaknya 30 menit lebih awal.</li>
           <li>Belilah tiket dari anak-anak yang banyak menjual tiket di depan puri Saren, karena anda dapat menawar harga tiket.</li>
           <li>Bawalah lotion anti nyamuk.</li>
           <li>Bersiaplah untuk duduk agak lama.</li>
           <li>Bawalah brosur tentang tarian ini, agar anda tahu jalan ceritanya saat menonton.</li>
-        </ul>
+        </ol>
       </section>
     </article>
   </body>
