--- a/public html/3. Pura Taman Saraswati.html
+++ b/public html/3. Pura Taman Saraswati.html
@@ -45,8 +45,6 @@
       </Section>
       <section>
         <h2>Penjelasan Pura Taman Saraswati</h2>
-      </section>
-      <section>
         <p>Pura Taman Saraswati Ubud - Wisata ke Ubud Bali, apa ada yang tidak suka? Jika ada, sebagian besar penyebabnya karena harga-harga di kawasan objek wisata Ubud, lebih mahal dibandingkan dengan objek wisata terkenal di Bali yang lain.Hampir sebagian besar wisatawan mancanegara dan domestik, selalu merencanakan untuk mengunjungi tempat wisata di Ubud. Disini tersedia banyak hotel dari kelas bintang lima sampai dengan hotel melati.</p>
       </section>
       <section>
@@ -54,8 +52,6 @@
       </section>
       <section>
         <h2>Menonton Tari Kecak Di Pura Taman Saraswati Ubud</h2>
-      </section>
-      <section>
         <p>Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud. Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.</p>
       </section>
       <section>
@@ -63,27 +59,21 @@
       </section>
       <section>
         <h2>Pura Kolam Bunga Teratai</h2>
-      </section>
-      <section>
         <p>Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.</p>
       </section>
       <Section>
         <h2>Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud</h2>
-      </Section>
-      <Section>
         <p>Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.</p>
       </Section>
       <section>
-        <p>Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.</p><p style="color:red"> Lihat di sini <a href="http://www.rentalmobilbali.net/tari-kecak-ubud/">Jadwal Tari Kecak Ubud.</a></p>
+        <p>Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.</p><p style="color:red"> Lihat di sini <a href="4. Tari Kecak Ubud.html#4"> Jadwal Tari Kecak Ubud.</a></p>
+        <p>Ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud :</p>
       </section>
       <Section>
-        <p>Bagi anda yang tidak memilih hotel tempat menginap di Ubud dan berencana untuk wisata ke Ubud, ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud.</p>
-      </Section>
-      <section>
         <h3>1. Mencari Jasa Sewa Mobil Dengan Supir Di Bali</h3>
         <p>Dengan cara menyewa mobil + driver di Bali, akan sangat memudahkan anda untuk berpergian dari satu tempat wisata di Bali ke tempat wisata yang lain, tanpa memikirkan mencari tempat parkir, mencari jalan pintas, serta memikirakan tetang kemacetan jalanan.</p>
         <p>Objek wisata di Ubud, sangat jarang tersedia tempat parkir mobil, hampir sebagian besar, orang parkir di penggir jalan dan sangat sering penuh. Karena hal ini, kami sangat menyarankan anda untuk mencari penyedia jasa rent car di Bali dengan supir.</p>
-      </section>
+      </Section>
       <Section>
         <h3>2. Membeli Paket Wisata Murah Di Bali</h3>
         <p>Karena Ubud sangat terkenal dan mendapat permintaan yang sangat tinggi dari wisatawan, maka sangat banyak penyedia usaha perjalanan wisata yang menyediakan Ubud tour.</p>
